<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/repository_list_item"
    android:paddingTop="5dp"
    android:paddingBottom="5dp"
    android:paddingStart="10dp"
    android:paddingLeft="10dp"
    android:paddingEnd="10dp">


    <Button android:id="@+id/buttonSelectRepository"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="Repository"/>

</LinearLayout>