<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.eemeliheinonen.gitcheck.CommitsFragment">

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/fragment_commits_swipe_refresh_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_commits"
            android:layout_height="wrap_content"
            android:layout_width="match_parent" />
    </android.support.v4.widget.SwipeRefreshLayout>

</FrameLayout>
